force-app/main/default/objects/aig_AI_Risk_Packet_Question_Resp_Choice__c/aig_AI_Risk_Packet_Question_Resp_Choice__c.object-meta.xml
<CustomObject>
    <label>AI Risk Packet Question Response Choice</label>
    <nameField>
        <label>Choice Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Risk Packet Question Response Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>