force-app/main/default/objects/aig_AI_Risk_Packet_Question_Resp_Choice__c/fields/aig_AI_Risk_Packet_Question__c.field-meta.xml
<CustomField>
    <fullName>aig_AI_Risk_Packet_Question__c</fullName>
    <label>AI Risk Packet Question</label>
    <referenceTo>aig_AI_Risk_Packet_Question__c</referenceTo>
    <relationshipLabel>AI Risk Packet Question Response Choices</relationshipLabel>
    <relationshipName>aig_AI_Risk_Packet_Question_Resp_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>