force-app/main/default/objects/aig_AI_Risk_Packet_Question_Resp_Choice__c/fields/aig_Impact__c.field-meta.xml
<CustomField>
    <fullName>aig_Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aig_Impact</valueSetName>
    </valueSet>
</CustomField>