force-app/main/default/objects/aig_AI_Risk_Packet_Question_Resp_Choice__c/fields/aig_Likelihood__c.field-meta.xml
<CustomField>
    <fullName>aig_Likelihood__c</fullName>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>aig_Likelihood</valueSetName>
    </valueSet>
</CustomField>